Fix alignments

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -35,10 +35,12 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 header {
   text-align: center;
+  margin-top: 30px;
 }
 
 h1 {
@@ -108,4 +110,5 @@ a:link {
 }
 .githubs span {
   float: right;
+  padding-right: 10px;
 }
